WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196211
Address NSWindow sometimes using WebKitTestRunnerEvent too early
https://bugs.webkit.org/show_bug.cgi?id=196211
Summary
Address NSWindow sometimes using WebKitTestRunnerEvent too early
Alexey Proskuryakov
Reported
2019-03-25 12:56:18 PDT
NSWindow is free to use NSEvent at any time, but our code in WebKitTestRunnerEvent can crash unless certain initialization has already happened.
rdar://problem/49110552
Attachments
proposed fix
(2.07 KB, patch)
2019-03-25 12:59 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(2.09 KB, patch)
2019-03-25 14:00 PDT
,
Alexey Proskuryakov
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-highsierra-wk2
(3.09 MB, application/zip)
2019-03-25 15:29 PDT
,
EWS Watchlist
no flags
Details
proposed fix
(3.51 KB, patch)
2019-03-25 18:06 PDT
,
Alexey Proskuryakov
thorton
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2019-03-25 12:59:06 PDT
Created
attachment 365886
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2019-03-25 14:00:52 PDT
Created
attachment 365895
[details]
proposed fix
EWS Watchlist
Comment 3
2019-03-25 15:29:19 PDT
Comment on
attachment 365895
[details]
proposed fix
Attachment 365895
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/11664402
New failing tests: fast/images/animated-gif-window-resizing.html fast/animation/request-animation-frame-in-two-pages.html tiled-drawing/tiled-drawing-scroll-position-page-cache-restoration.html fast/dom/Geolocation/window-close-crash.html fast/events/page-visibility-iframe-move-test.html imported/w3c/web-platform-tests/intersection-observer/target-in-different-window.html
EWS Watchlist
Comment 4
2019-03-25 15:29:21 PDT
Created
attachment 365908
[details]
Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Alexey Proskuryakov
Comment 5
2019-03-25 18:06:27 PDT
Created
attachment 365933
[details]
proposed fix
WebKit Commit Bot
Comment 6
2019-03-25 22:45:14 PDT
Comment on
attachment 365933
[details]
proposed fix Rejecting
attachment 365933
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 365933, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=365933&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=196211
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 365933 from
bug 196211
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=365933
Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/11669232
Alexey Proskuryakov
Comment 7
2019-03-26 08:59:02 PDT
Indeed. Committed
http://trac.webkit.org/r243496
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug