Address NSWindow sometimes using WebKitTestRunnerEvent too early https://bugs.webkit.org/show_bug.cgi?id=196211 rdar://problem/49110552

Reviewed by Tim Horton.

* WebKitTestRunner/TestController.cpp: (WTR::TestController::initialize):
Make sure that EventSenderProxy always exists when running tests. We used to create
it when resetting before the first test, which is a bit too late.

* WebKitTestRunner/TestController.h:
* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformCreateWebView):
(WTR::TestController::platformCreateOtherPage):
(WTR::TestController::finishCreatingPlatformWebView):
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView):
Moved some code that made NSWindow use NSEvent during web view creation. We may
need to move more if some other case us found, but this is enough for now.



Canonical link: https://commits.webkit.org/210551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243496 268f45cc-cd09-0410-ab3c-d52691b4dbfc